--- a/tex_files/chapter-appendix.tex
+++ b/tex_files/chapter-appendix.tex
@@ -184,43 +184,43 @@ formula_26_leroux <- CumNumberTestedIll ~
 \caption{The fixed effects for the BYM2 model. Values are rounded. \label{allGermanyBYM2}}
 \begin{tabular}{l r r r r}
 \toprule
-\textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025)} & \textbf{exp(q0975)} \\
+\textbf{Variable}	& \textbf{Mean}	& \textbf{exp(mean$_{\hbox{p}}$)} & \textbf{exp(q0025$_{\hbox{p}}$)} & \textbf{exp(q0975$_{\hbox{p}}$)} \\
 \midrule
-(Intercept) & -2.752 & 0.1308 & -5.103  & -0.407\\
-AfD & 3.930 & 57.70  & 2.944 & 4.907 \\
-sex & 3.726 & 436.4 & -0.5261 & 7.962 \\
-Union & 0.8027 & 2.406 & 0.04095 & 1.562 \\
-aerodrome & 0.3879 & 1.806 & -0.8624 & 1.635 \\
-kindergarten & 0.1613 & 1.182 & -0.05895 & 0.3812 \\
-entertainment & 0.1275 & 1.211 & -0.5746 & 0.8272 \\
-shops & 0.06951 & 1.084 &  -0.2293 & 0.3673 \\
-nursing\_home & 0.06812 & 1.144 & -0.6464 & 0.7793 \\
-bakeries & 0.05613 & 1.068 & -0.2200 & 0.3315 \\
-sport & 0.04839 & 1.052 &  -0.08367 & 0.1801 \\
-unemployed\_ & \multirow{2}{*}{0.04093} & \multirow{2}{*}{1.042}  & \multirow{2}{*}{0.02586} & \multirow{2}{*}{0.5594}\\
+(Intercept) & -2.752 & 0.1308 & 0.005269 & 0.6603\\
+AfD & 3.930 & 57.70  & 19.04 & 135.1 \\
+sex & 3.726 & 436.4 & -528.5 & 2156 \\
+Union & 0.8027 & 2.406 & 1.044 & 4.758 \\
+aerodrome & 0.3879 & 1.806 & 0.4220 & 5.111 \\
+kindergarten & 0.1613 & 1.182 & 0.9437 & 1.463 \\
+entertainment & 0.1275 & 1.211 & 0.5643 & 2.282 \\
+shops & 0.06951 & 1.084 & 0.7961 & 1.442 \\
+nursing\_home & 0.06812 & 1.144 & 0.5251 & 2.175 \\
+bakeries & 0.05613 & 1.068 & 0.8035 & 1.392 \\
+sport & 0.04839 & 1.052 &  0.9203 & 1.120 \\
+unemployed\_ & \multirow{2}{*}{0.04093} & \multirow{2}{*}{1.042}  & \multirow{2}{*}{1.026} & \multirow{2}{*}{1.057}\\
 foreigners  \\
-asylum\_seeker\_ & \multirow{2}{*}{0.004844} & \multirow{2}{*}{1.005}  & \multirow{2}{*}{-0.005108} & \multirow{2}{*}{0.01478}\\
+asylum\_seeker\_ & \multirow{2}{*}{0.004844} & \multirow{2}{*}{1.005}  & \multirow{2}{*}{0.9950} & \multirow{2}{*}{1.015}\\
 benefits  \\
-pop\_dens & 0.00007097 & 1.000 & 0.00001480 & 0.0001270 \\
-total\_income & 0.00001266 & 1.000 & -0.00003628 & 0.00006146 \\
-urb\_dens & 0.000009849  & 1.0000 & -0.0006510 & 0.0006684 \\
-trade\_tax &  0.0000001765 & 1.0000 & -0.00000008805 & 0.0000004411 \\
-income\_tax &  -0.00006125 & 0.9999 &  -0.0002156 & 0.00009267 \\
-welfare\_ & \multirow{2}{*}{-0.001508} & \multirow{2}{*}{0.9985}  & \multirow{2}{*}{-0.01493} & \multirow{2}{*}{0.01185}\\
+pop\_dens & 0.00007097 & 1.000 & 1.000 & 1.000 \\
+total\_income & 0.00001266 & 1.000 & 1.000 & 1.000 \\
+urb\_dens & 0.000009849  & 1.0000 & 0.9993 & 1.001 \\
+trade\_tax &  0.0000001765 & 1.0000 & 1.000 & 1.000\\
+income\_tax &  -0.00006125 & 0.9999 &  0.9998 & 1.000 \\
+welfare\_ & \multirow{2}{*}{-0.001508} & \multirow{2}{*}{0.9985}  & \multirow{2}{*}{0.9852} & \multirow{2}{*}{1.012}\\
 recipients \\
-protection\_ & \multirow{2}{*}{-0.003726} & \multirow{2}{*}{0.9963}  & \multirow{2}{*}{-0.007437} & \multirow{2}{*}{-0.00003260}\\
+protection\_ & \multirow{2}{*}{-0.003726} & \multirow{2}{*}{0.9963}  & \multirow{2}{*}{0.9926} & \multirow{2}{*}{1.000}\\
 seekers \\
-unemployed\_ & \multirow{2}{*}{-0.008041} & \multirow{2}{*}{0.9920}  & \multirow{2}{*}{-0.01448} & \multirow{2}{*}{-0.001612} \\
+unemployed\_ & \multirow{2}{*}{-0.008041} & \multirow{2}{*}{0.9920}  & \multirow{2}{*}{0.9857} & \multirow{2}{*}{0.9984} \\
 total \\
-platform & -0.008767  & 0.9913 &  -0.01806 & 0.0004970 \\
-schools & -0.01115  & 0.9935 & -0.2000 & 0.17773 \\
-FDP & -0.01648  & 2.490 & -2.688 & 2.649 \\
-restaurant & -0.03560  & 0.9654 &  -0.0931 & 0.02173 \\
-clinic & -0.03697  & 0.9646 &  -0.1222 & 0.04803 \\
-hairdresser & -0.05900  & 0.9483 & -0.2732 & 0.1545 \\
-SPD & -0.1807  & 0.9439 &  -1.154 & 0.7900 \\
-die\_linke & -0.2930  & 1.043 &  -1.897 & 1.3084 \\
-other\_parties & -12.22  & 1.469e+31 & -46.58 & 22.06 \\
+platform & -0.008767  & 0.9913 &  0.9821 & 1.000 \\
+schools & -0.01115  & 0.9935 & 0.8194 & 1.193 \\
+FDP & -0.01648  & 2.490 & 0.04743 & 14.02\\
+restaurant & -0.03560  & 0.9654 & 0.9113 & 1.022 \\
+clinic & -0.03697  & 0.9646 &  0.8853 & 1.049 \\
+hairdresser & -0.05900  & 0.9483 & 0.7617 & 1.1166 \\
+SPD & -0.1807  & 0.9439 & 0.3160 & 2.197 \\
+die\_linke & -0.2930  & 1.043 &  0.1483 & 3.682 \\
+other\_parties & -12.22  & 1.469e+31 & -8.710e+8 & 1.468e+04\\
 \bottomrule
 \end{tabular}
 \end{table}
